--- a/src/beta-plugins/engineering-panel/public/webcomponents/orov-engineering-button.html
+++ b/src/beta-plugins/engineering-panel/public/webcomponents/orov-engineering-button.html
@@ -153,7 +153,7 @@
                   state: false,
                   description: 'External LED lights on/off',
                   events: [
-                    {message:'plugin.externalLights.level',fn: function(lightNum, level){ if( lightNum == 0){ return level > 0; } else{ return null; } }}
+                    {message:'plugin.externalLights.currentPower',fn: function(power){ return power > 0;}}
                   ],
                   switch: function (state) {
                     if (self.eventEmitter !== undefined)
@@ -161,12 +161,12 @@
                       if( state == true )
                       {
                         // Turn off
-                        self.eventEmitter.emit('plugin.externalLights.setOnOff', 0, false );
+                        self.eventEmitter.emit('plugin.externalLights.off' );
                       }
                       else
                       {
                         // Turn on to max
-                        self.eventEmitter.emit('plugin.externalLights.setOnOff', 0, true );
+                        self.eventEmitter.emit('plugin.externalLights.on' );
                       }
                     }
                   }
@@ -176,7 +176,7 @@
                   state: false,
                   description: 'External LED lights on/off',
                   events: [
-                    {message:'plugin.externalLights.level',fn: function(lightNum, level){if( lightNum == 1){ return level > 0; } else{ return null; } } }
+                    {message:'plugin.externalLights.currentPower',fn: function(power){ return power > 0; } }
                   ],
                   switch: function (state) {
                     if (self.eventEmitter !== undefined)
@@ -184,12 +184,12 @@
                       if( state == true )
                       {
                         // Turn off
-                        self.eventEmitter.emit('plugin.externalLights.setOnOff', 1, false );
+                        self.eventEmitter.emit('plugin.externalLights.off' );
                       }
                       else
                       {
                         // Turn on to max
-                        self.eventEmitter.emit('plugin.externalLights.setOnOff', 1, true );
+                        self.eventEmitter.emit('plugin.externalLights.on' );
                       }
                     }
                   }
