--- a/src/beta-plugins/engineering-panel/public/webcomponents/orov-engineering-button.html
+++ b/src/beta-plugins/engineering-panel/public/webcomponents/orov-engineering-button.html
@@ -153,30 +153,7 @@
                   state: false,
                   description: 'External LED lights on/off',
                   events: [
-                    {message:'plugin.externalLights.currentPower',fn: function(power){ return power > 0;}}
-                  ],
-                  switch: function (state) {
-                    if (self.eventEmitter !== undefined)
-                    {
-                      if( state == true )
-                      {
-                        // Turn off
-                        self.eventEmitter.emit('plugin.externalLights.off' );
-                      }
-                      else
-                      {
-                        // Turn on to max
-                        self.eventEmitter.emit('plugin.externalLights.on' );
-                      }
-                    }
-                  }
-                },
-                XL1: {
-                  switchable: true,
-                  state: false,
-                  description: 'External LED lights on/off',
-                  events: [
-                    {message:'plugin.externalLights.currentPower',fn: function(power){ return power > 0; } }
+                    {message:'plugin.externalLights.currentPower',fn: function(power){ return ( power > 0 );}}
                   ],
                   switch: function (state) {
                     if (self.eventEmitter !== undefined)
