Minor cleanup of lights/elights plugins based on PR feedback

--- a/src/plugins/externallights/public/webcomponents/orov-elight-switch.html
+++ b/src/plugins/externallights/public/webcomponents/orov-elight-switch.html
@@ -18,7 +18,7 @@
     ready:function(){
         this.defaultPanel="flight-switches";
         this.shortName="EXL";
-        this.description="ELights on/off";
+        this.description="External Lights on/off";
     },
     _handleSwitchChange:function(){
         if (this.$.toggle.checked){
