--- a/src/plugins/externallights/public/webcomponents/orov-elight-switch-behavior.html
+++ b/src/plugins/externallights/public/webcomponents/orov-elight-switch-behavior.html
@@ -7,21 +7,17 @@
   'use strict';
       var switchBehaviorImpl= {
       properties: {
-        index:{type:Number}
       },
       on:function(){
-        this.eventEmitter.emit('plugin.externalLights.setOnOff',this.index,true)
+        this.eventEmitter.emit('plugin.externalLights.on')
       },
       off:function(){
-        this.eventEmitter.emit('plugin.externalLights.setOnOff',this.index,false)
+        this.eventEmitter.emit('plugin.externalLights.off')
       },
       registerEmitterHandlers: function(emitter){
         var self = this;
-        emitter.withHistory.on('plugin.externalLights.level',function(index,level){
-          if (index!==self.index){
-            return;
-          }
-          if (state.enabled){
+        emitter.withHistory.on('plugin.externalLights.currentPower',function(power){
+          if (power>0){
             self.set('switchState','on')
           } else {
             self.set('switchState','off')
