--- a/src/plugins/navigation-data/public/webcomponents/orov-horizon.html
+++ b/src/plugins/navigation-data/public/webcomponents/orov-horizon.html
@@ -32,11 +32,19 @@
 
 <dom-module id="orov-horizon">
   <style type="text/css">
+ 
       .hidden { display: none }
-    </style>
+      
+      #horizon {
+
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+  </style>
   <template>
 
-    <canvas id="horizon" class="hud" style="width: 100%; height:100%"></canvas>
+    <canvas id="horizon" class="hud"></canvas>
 
   </template>
   <script>
@@ -354,10 +362,12 @@
           this.ctx.restore();
         },
         draw: function draw() {
+
           //TODO: Research better attributes for width and height as these don't
           //appear to scale down when the window shrinks.
           this.set('ctx.canvas.width', this.ctx.canvas.clientWidth);
           this.set('ctx.canvas.height', this.ctx.canvas.clientHeight);
+
           this.pixelsPerDeg = this.ctx.canvas.height / (frontCameraFovY / 2);
           this.ctx.clearRect(0, 0, this.ctx.canvas.width, this.ctx.canvas.height);
           this.drawHorizon();
